# rust-basic-subscriptions

./: .gitignore  Cargo.toml  Dockerfile  README.MD  Vagrantfile  docker-compose.yml  logs.json  logs2.json  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml  local.yml  production.yml
migrations/: 20220702172150_make_status_not_null_in_subscriptions.sql  20221023143859_create_users_table.sql  20221023150600_rename_password_column.sql  20221029174735_add_salt_to_users.sql  20221029180843_remove_salt_from_users.sql  20221112215816_seed_user.sql  20230114183433_create_idempotency_table.sql  20230114210839_relax_null_checks_on_idempotency.sql  20230115101337_create_newsletter_issues_table.sql  20230115102352_create_issue_delivery_queue_table.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
