[package]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
actix-web = "4"
actix-web-flash-messages = {version = "0.4", features = ["cookies"]}
actix-web-lab = "0.16"
anyhow = "1"
argon2 = {version = "0.4", features = ["std"]}
chrono = "0.4.15"
config = "0.13.1"
rand = {version = "0.8", features = ["std_rng"]}
secrecy = {version = "0.8", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1", features = ["log"]}
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
unicode-segmentation = "1"
uuid = {version = "1", features = ["v4", "serde"]}
validator = "0.15.0"

[dependencies.sqlx]
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
version = "0.6"

[dependencies.reqwest]
default-features = false
features = ["json", "rustls-tls", "cookies"]
version = "0.11"

[dev-dependencies]
claim = "0.5"
fake = "2.5"
once_cell = "1"
serde_urlencoded = "0.7.1"
#proptest = "1.0.0"
linkify = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"

wiremock = "0.5"

[profile.dev.build-override]
codegen-units = 1
opt-level = 3
